Fix footer on mobile

--- a/common/static/css/custom.css
+++ b/common/static/css/custom.css
@@ -4,19 +4,27 @@ img#logo {
     float:left;
 }
 
-/*
- * Footer
- */
 
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  padding-bottom: 100px;
+}
 .footer {
-  padding: 2.5rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+
+  padding: 1rem 0;
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
   border-top: .05rem solid #e5e5e5;
-}
-
-.footer p:last-child {
-  margin-bottom: 0;
 }
 
